# src

./: .gitignore
docs/: .gitignore  package.json  pnpm-lock.yaml  run.sh
docs/.vitepress/: config.mts
docs/.vitepress/theme/: index.ts
docs/.vitepress/theme/components/: ArticleStats.vue  BlogList.vue  BlogPost.vue  Breadcrumb.vue  DraftMessage.vue  Image.vue  Tag.vue
docs/.vitepress/theme/style/: index.css  table.css  vp-code.css
docs/docs/: FastAPI_PRD.md  index.md
docs/docs/blog/: 2026_01_05_test.md  ViT.md  fastapi_template.md  knn.md  langchain_v1.md  minigpt.md  nvidia-pointnet.md  test.md  weixin_miniprogram.md
docs/docs/blog/snippets/: vit.py
docs/src/knn/: KnnExplainer.vue
docs/src/knn/components/: ControlPanel.vue  KnnCanvas.vue
docs/src/knn/core/: canvas-renderer.ts  datasets.ts  knn-engine.ts  types.ts
miniprogram/backend/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  start.bat
miniprogram/backend/app/: __init__.py  main.py
miniprogram/backend/app/api/: __init__.py
miniprogram/backend/app/api/v1/auth/: README.md  __init__.py  crud.py  dependencies.py  models.py  router.py  service.py
miniprogram/backend/app/core/: dependencies.py  exception.py  response.py
miniprogram/backend/app/database/: crud.py  session.py
miniprogram/backend/app/database/models/: __init__.py  tavern.py
miniprogram/backend/examples/: README.md  auth_service.py  user_model.py
miniprogram/uniapp/: .eslintrc-auto-import.json  vite.config.ts
miniprogram/uniapp/src/: App.vue  main.ts  manifest.json  pages.json  typings.ts
miniprogram/uniapp/src/components/privacy-agreement/: privacy-agreement.vue
miniprogram/uniapp/src/hooks/: index.ts  useAppUpdate.ts
miniprogram/uniapp/src/pages/agreement/: privacy-policy.vue  user-agreement.vue
miniprogram/uniapp/src/pages/index/: index.vue
miniprogram/uniapp/src/store/: index.ts  types.ts
miniprogram/uniapp/src/store/modules/: app.ts  examples.ts  index.ts  privacy.ts  user.ts
miniprogram/uniapp/src/types/: auto-import.d.ts
miniprogram/uniapp/src/utils/: device.ts  logger.ts
python_package/astrapi/: .env.example  Dockerfile  MAKEFILE.md  Make.ps1  Makefile  docker-compose.dev.yml  pyproject.toml
python_package/astrapi/app/: __init__.py
python_package/astrapi/app/alembic/: env.py
python_package/astrapi/app/api/: __init__.py
python_package/astrapi/app/api/v1/system/auth/: README.md  __init__.py  crud.py  dependencies.py  models.py  router.py  schemas.py  service.py
python_package/astrapi/app/core/: config.py  logging.py  permission.py  security.py
python_package/astrapi/app/database/: crud.py  model.py  session.py
python_package/astrapi/examples/: __init__.py  user_crud.py  user_router.py
python_package/fastapi_backend_template/: README.md  cookiecutter.json
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/alembic/: env.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/: __init__.py  main.py  worker.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/api/v1/: api.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/api/v1/endpoints/: auth.py  health.py  users.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/core/: config.py  database.py  dependencies.py  exceptions.py  logging.py  redis.py  security.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/middleware/: request_logging.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/models/: __init__.py  user.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/schemas/: auth.py  health.py  user.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/services/: user_service.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/app/utils/: common.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/docs/: api.md  deployment.md
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/scripts/: dev.py
python_package/fastapi_backend_template/{{cookiecutter.project_slug}}/tests/: conftest.py  test_api.py  test_auth.py  test_users.py
python_package/minigpt/: .gitignore  README.md  pyproject.toml
python_package/minigpt/minigpt/: build_vocab.py  dataset_stats.py  generate.py  model.py  qa_dataset.py  split_data.py  tokenizer.py  train.py
python_package/minigpt/minigpt/practice/: attention.py  casual_self_attention.py  multi_head_attention.py
python_package/minigpt/minigpt/qwen3/: qwen3_pytorch.py  qwen3_transformer.py
python_package/template/: README.md  cookiecutter.json
python_package/template/{{cookiecutter.package_name}}/: .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
python_package/template/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/: __init__.py
python_package/template/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/cli/: __init__.py  main.py
python_package/template/{{cookiecutter.package_name}}/{{cookiecutter.package_name}}/utils/: __init__.py  constants.py  exceptions.py  logging_config.py  type_utils.py
scripts/: bundle.sh
