[project]
name = "minigpt"
version = "0.1.0"
description = ""
authors = [{ name = "petwan", email = "wangpeide2010@126.com" }]
readme = "README.md"
requires-python = ">=3.10,<=3.13"
dependencies = ["torch (>=2.9.1,<3.0.0)", "tensorboard (>=2.20.0,<3.0.0)", "tqdm (>=4.67.1,<5.0.0)", "matplotlib (>=3.10.8,<4.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
